k8s/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: service1
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
