k8s/service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
