k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swe590-project-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/service1
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 8000
      - path: /api/service2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 8000
